--- a/tests/test_executor/Cargo.toml
+++ b/tests/test_executor/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+project-root = "0.2.2"
+colored = "2.0.0"
