--- a/tests/test1_bin/Cargo.toml
+++ b/tests/test1_bin/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2018"
 
 [dependencies]
 test1_lib = { path = "../test1_lib" }
+# unicode-ident = "1.0"
+#serde_derive_internals = { version = "0.28.0", path = "/home/user/src/serde/serde_derive_internals" }
+# proc-macro2 = "*"
+# quote = {version = "*"}
+# syn = "*"
+# serde = { version = "1.0.180", features= ["derive"] }
+#proc-macro2 = { version = "1.0" }
+#proc-macro2 = { version = "1.0.66", path = "/home/user/src/proc-macro2" }
